# trading_app

./: .env  .env.example  .gitignore  1.txt  CMakeLists.txt  hf_client_layout.ini  setup.sh  start_backend.sh  start_frontend.sh
.claude/: settings.local.json
backend/: CMakeLists.txt  config.hpp  main.cpp  utils.hpp
backend/api/: auth.cpp  auth.hpp  backtest_api.cpp  backtest_api.hpp  data_api.cpp  data_api.hpp  jwt.hpp  portfolio_api.cpp  portfolio_api.hpp  risk_api.cpp  risk_api.hpp  sha256.hpp  strategy_api.cpp  strategy_api.hpp  trading_api.cpp  trading_api.hpp
backend/brokers/: base.hpp  factory.hpp  mock_broker.cpp  mock_broker.hpp  rest_broker.cpp  rest_broker.hpp  types.hpp
backend/core/: backtester.cpp  backtester.hpp  data_loader.cpp  data_loader.hpp  live_trader.cpp  live_trader.hpp  risk_engine.cpp  risk_engine.hpp  statistics.cpp  statistics.hpp  strategy.cpp  strategy.hpp
backend/database/: connection.cpp  connection.hpp  models.hpp  repository.cpp  repository.hpp
build_backend/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
cmake/: FetchDependencies.cmake
common/: jwt.hpp  sha256.hpp  types.hpp
frontend/: CMakeLists.txt  api_client.cpp  api_client.hpp  app_state.hpp  main.cpp
frontend/ui/: backtest_panel.cpp  backtest_panel.hpp  dashboard_panel.cpp  dashboard_panel.hpp  login_panel.cpp  login_panel.hpp  risk_panel.cpp  risk_panel.hpp  sidebar.cpp  sidebar.hpp  trading_panel.cpp  trading_panel.hpp
